Worked on task 1

--- a/Fundamentals-of-Data-Analysis-Practical.ipynb
+++ b/Fundamentals-of-Data-Analysis-Practical.ipynb
@@ -34,6 +34,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Anscombe's quartet was first published in The American Statistician, Vol. 27, No. 1 (Feb., 1973), pp.17 - 21 in an article called 'Graphs for Statistical Analysis' by the author of the same name. F. J. Anscombe.\n",
+    "\n",
+    "In his article the author uses provocative language to argue that statistical analysis reliant solely on purely mathematical calculations can lead to errors. Anscombe strongly and passionately argues that graphs "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
