--- a/Fundamentals-of-Data-Analysis-Practical.ipynb
+++ b/Fundamentals-of-Data-Analysis-Practical.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Francis John Anscombe was born in Elstree, England on May 13, 1918. He received his B.A. degree from Cambridge University in 1939, and his M.A. degree in 1943. Anscombe was with the British Ministry of Supply from 1940-1945, and the Rothamsted Experimental Station from 1945-1947. He was a lecturer in math at Cambridge from 1948-1956, and a research associate, associate professor, and professor at Princeton from 1953-1963. Anscombe joined the faculty of Yale as a professor of statistics in 1963. (Yale University Library)"
+    "##### Francis John Anscombe was born in Elstree, England on May 13, 1918. He received his B.A. degree from Cambridge University in 1939, and his M.A. degree in 1943. Anscombe was with the British Ministry of Supply from 1940-1945, and the Rothamsted Experimental Station from 1945-1947. He was a lecturer in math at Cambridge from 1948-1956, and a research associate, associate professor, and professor at Princeton from 1953-1963. Anscombe joined the faculty of Yale as a professor of statistics in 1963. \n",
+    "\n",
+    "###### (Yale University Library)"
    ]
   },
   {
@@ -52,7 +54,11 @@
     "\n",
     "Anscombe did not revel how he created his data set, methods for replicating his calculations have been proposed by Chatterjee, Sangit & Firat, Aykut in their article \"Generating Data with Identical Statistics but Dissimilar Graphics: A Follow up to the Anscombe Dataset\". American Statistician. 61 (3): 248–254. As well as by S. J. HASLETT & K. GOVINDARAJU in their paper Cloning Data: Generating Datasets with exactly the same multiple linear regression fit. \n",
     "\n",
-    "Haslett and Govindaraju based their algorithm on the orthogonality principle, which is a necessary and sufficient condition for the optimality of a Bayesian estimator. In essence one begins with a regression line. "
+    "Haslett and Govindaraju based their algorithm on the orthogonality principle, which is a necessary and sufficient condition for the optimality of a Bayesian estimator. In essence one begins with a regression line. \n",
+    "\n",
+    "In Chatterjee (2007), the purpose is to generate novel (x,y) pairs with the same means and standard deviations from initial dataset, while maximizing different \"discrepancy/dissimilarity\" objective functions. As these functions can be non-convex or non-differentiable, they use genetic algorithms (GA). Important steps consist in ortho-normalization, which is very consistent with preserving mean and (unit-)variance. The paper's figures (half the paper content) superimpose input and GA output data. My opinion is that GA outputs lose a lot of the original intuitive interpretation.\n",
+    "\n",
+    "And technically, neither the median nor the midrange is preserved, and the paper does not mention renormalization procedures that would preserve ℓ2, ℓ1 and ℓ∞ stats."
    ]
   },
   {
@@ -66,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define values for the dataset\n",
+    "# define values for the dataset, note that x1, x2, & x3 are identical an could be consolidated into one function call. \n",
     "x1 = df.loc[:,'x1']\n",
     "y1 = df.loc[:,'y1']\n",
     "x2 = df.loc[:,'x2']\n",
@@ -105,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -124,10 +130,12 @@
     }
    ],
    "source": [
+    "# define a function to create a linear regession line on each chart\n",
     "def fit(x):\n",
     "    return 3 + 0.5 * x\n",
     "\n",
-    "\n",
+    "# Set the minimum and maximum points for the regression line. I have set these to the maximum values to better illustate \n",
+    "# the charts\n",
     "xfit = np.array([np.min(0), np.max(20)])\n",
     "\n",
     "plt.subplot(2, 2, 1)\n",
