--- a/Fundamentals-of-Data-Analysis-Practical.ipynb
+++ b/Fundamentals-of-Data-Analysis-Practical.ipynb
@@ -50,15 +50,18 @@
    "source": [
     "Anscombe's quartet was first published in The American Statistician, Vol. 27, No. 1 (Feb., 1973), pp.17 - 21 in an article called 'Graphs for Statistical Analysis' by the author of the same name. F. J. Anscombe.\n",
     "\n",
-    "The author argues that statistical analysis that relies solely on mathematical calculations can lead to errors. Anscombe strongly and passionately argues that th use of graphs was undervalued and they provide insights into the data that could be otherwise missed. He produced 4 datasets (the 'Quartet') corresponding to x and y values that can be plotted on a chart. Each quartet has exactly the same fitted multiple linear regression equation, and therefore mean, standard deviation and correlation co-effficient. \n",
+    "In that article Anscombe proposes that statistical analysis that rely solely on mathematical calculations can lead to errors. Anscombe strongly and passionately argued that the use of graphs was undervalued and they provide insights into the data that could be otherwise missed. He produced 4 datasets (latterly referred to as Anscombe's 'Quartet') each containing 11 (x, y) pairs. Each quartet has almost exactly the same fitted multiple linear regression equation, and therefore nearly identical mean, standard deviation and correlation co-effficient. \n",
     "\n",
-    "Anscombe did not revel how he created his data set, methods for replicating his calculations have been proposed by Chatterjee, Sangit & Firat, Aykut in their article \"Generating Data with Identical Statistics but Dissimilar Graphics: A Follow up to the Anscombe Dataset\". American Statistician. 61 (3): 248–254. As well as by S. J. HASLETT & K. GOVINDARAJU in their paper Cloning Data: Generating Datasets with exactly the same multiple linear regression fit. \n",
+    "Anscombe did not revel how he created his data set, methods for replicating his calculations have been proposed by many, including: Chatterjee, Sangit & Firat, Aykut in their article \"Generating Data with Identical Statistics but Dissimilar Graphics: A Follow up to the Anscombe Dataset\". American Statistician. 61 (3): 248–254. As well as by S. J. HASLETT & K. GOVINDARAJU in their paper Cloning Data: Generating Datasets with exactly the same multiple linear regression fit. \n",
     "\n",
-    "Haslett and Govindaraju based their algorithm on the orthogonality principle, which is a necessary and sufficient condition for the optimality of a Bayesian estimator. In essence one begins with a regression line. \n",
+    "Haslett and Govindaraju based their algorithm on the orthogonality principle, which is a necessary and sufficient condition for the optimality of a Bayesian estimator. In essence one begins with a regression line, then plots x and y values above and below the regression line that negate eachother.\n",
     "\n",
-    "In Chatterjee (2007), the purpose is to generate novel (x,y) pairs with the same means and standard deviations from initial dataset, while maximizing different \"discrepancy/dissimilarity\" objective functions. As these functions can be non-convex or non-differentiable, they use genetic algorithms (GA). Important steps consist in ortho-normalization, which is very consistent with preserving mean and (unit-)variance. The paper's figures (half the paper content) superimpose input and GA output data. My opinion is that GA outputs lose a lot of the original intuitive interpretation.\n",
+    "Laurant Duval states in his Stack Exchange blog post that: \"in Chatterjee (2007), the purpose is to generate novel (x,y) pairs with the same means and standard deviations from initial dataset, while maximizing different \"discrepancy/ dissimilarity\" objective functions. As these functions can be non-convex or non-differentiable, they use genetic algorithms (GA). Important steps consist in ortho-normalization, which is very consistent with preserving mean and (unit-)variance.\"\n",
     "\n",
-    "And technically, neither the median nor the midrange is preserved, and the paper does not mention renormalization procedures that would preserve ℓ2, ℓ1 and ℓ∞ stats."
+    "In their paper titled: Same Stats, Different Graphs: Generating Datasets with Varied Appearance and Identical Statistics through Simulated Annealing, Justin Matejka and George Fitzmaurice state that: \"that while generating a dataset from scratch to have particular statistical properties is relatively difficult, it is relatively easy to take an existing dataset, modify it slightly, and maintain (nearly) the same statistical properties. With repetition, this process creates a dataset with a different visual appearance from the original,while maintaining the same statistical properties\"\n",
+    "\n",
+    "In conclusion:\n",
+    "Advanced mathematical and staticial knowledge is required to reproduce datasets similar to Anscombes' Quartet, that have near identical multiple linear regression equations. And there are practical applications to methods that do so, such as anonymising data to make it look identical but have different structures. \n"
    ]
   },
   {
@@ -88,13 +91,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the data set\n",
+    "# load the data set as df\n",
     "df = pd.read_csv(\"anscombe (1).csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -130,7 +133,7 @@
     }
    ],
    "source": [
-    "# define a function to create a linear regession line on each chart\n",
+    "# define a function to create a linear regession line to fit onto each chart\n",
     "def fit(x):\n",
     "    return 3 + 0.5 * x\n",
     "\n",
@@ -138,10 +141,15 @@
     "# the charts\n",
     "xfit = np.array([np.min(0), np.max(20)])\n",
     "\n",
+    "# create subplots\n",
     "plt.subplot(2, 2, 1)\n",
+    "# plot the first of the quartets with a fit line\n",
     "plt.plot(x1, y1, 's', xfit, fit(xfit), 'r--', lw=2)\n",
+    "# set the scale for the axis\n",
     "plt.axis([2, 20, 2, 14])\n",
+    "# label the tick marks axis scale\n",
     "plt.setp(plt.gca(), xticklabels=[], yticks=(4, 8, 12), xticks=(0, 10, 20))\n",
+    "# label the subplot\n",
     "plt.text(3, 12, 'I', fontsize=10)\n",
     "\n",
     "plt.subplot(2, 2, 2)\n",
@@ -163,18 +171,12 @@
     "plt.setp(plt.gca(), yticklabels=[], yticks=(4, 8, 12), xticks=(0, 10, 20))\n",
     "plt.text(3, 12, \"IV\", fontsize=10)\n",
     "\n",
+    "# create an overall label for the charts\n",
     "plt.suptitle(\"Anscombe's Quartet\", fontsize=20)\n",
     "\n",
     "plt.show()\n",
     "\n",
     "# Based on code adapted from https://matplotlib.org/gallery/specialty_plots/anscombe.html "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Display the dataset"
    ]
   },
   {
@@ -372,6 +374,7 @@
     }
    ],
    "source": [
+    "# Display the dataset\n",
     "df"
    ]
   },
@@ -432,26 +435,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean=7.501, std=1.937, r=0.816\n",
-      "mean=7.501, std=1.937, r=0.816\n",
-      "mean=7.500, std=1.936, r=0.816\n",
-      "mean=7.501, std=1.936, r=0.817\n"
+      "r=0.816421\n",
+      "r=0.816237\n",
+      "r=0.816287\n",
+      "r=0.816521\n"
      ]
     }
    ],
    "source": [
-    "# Display descriptive statistics in formated columns to three decimal places\n",
+    "# Display descriptive statistics in formated columns to six decimal places\n",
     "pairs = (x1, y1), (x2, y2), (x3, y3), (x4, y4)\n",
     "for x, y in pairs:\n",
-    "    print('mean=%1.3f, std=%1.3f, r=%1.3f' % (np.mean(y), np.std(y),\n",
-    "          np.corrcoef(x, y)[0][1]))"
+    "    print('r=%1.6f' % (np.corrcoef(x, y)[0][1]))\n",
+    "    \n",
+    "# Based on code adapted from https://matplotlib.org/gallery/specialty_plots/anscombe.html "
    ]
   },
   {
@@ -464,10 +468,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
