Worked on Task 4

--- a/Fundamentals-of-Data-Analysis-Practical.ipynb
+++ b/Fundamentals-of-Data-Analysis-Practical.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "Anscombe's quartet was first published in The American Statistician, Vol. 27, No. 1 (Feb., 1973), pp.17 - 21 in an article called 'Graphs for Statistical Analysis' by the author of the same name. F. J. Anscombe.\n",
     "\n",
-    "In that article Anscombe proposes that statistical analysis that rely solely on mathematical calculations can lead to errors. Anscombe strongly and passionately argued that the use of graphs was undervalued and they provide insights into the data that could be otherwise missed. He produced 4 datasets (latterly referred to as Anscombe's 'Quartet') each containing 11 (x, y) pairs. Each quartet has almost exactly the same fitted multiple linear regression equation, and therefore nearly identical mean, standard deviation and correlation co-effficient. \n",
+    "In that article Anscombe proposes that statistical analysis that rely solely on mathematical calculations can lead to errors. Anscombe strongly and passionately argued that the use of graphs was undervalued and they provide insights into the data that could be otherwise missed. He produced 4 datasets (latterly referred to as Anscombe's 'Quartet') each containing 11 (x, y) pairs. \n",
     "\n",
     "Anscombe did not revel how he created his data set, methods for replicating his calculations have been proposed by many, including: Chatterjee, Sangit & Firat, Aykut in their article \"Generating Data with Identical Statistics but Dissimilar Graphics: A Follow up to the Anscombe Dataset\". American Statistician. 61 (3): 248–254. As well as by S. J. HASLETT & K. GOVINDARAJU in their paper Cloning Data: Generating Datasets with exactly the same multiple linear regression fit. \n",
     "\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {
     "scrolled": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "10          11   5   5   5   8   5.68  4.74   5.73   6.89"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,8 +380,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x1    9.0\n",
+       "x2    9.0\n",
+       "x3    9.0\n",
+       "x4    9.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the mean for each column of x-axis values\n",
+    "np.mean(df.iloc[:, 1:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "y1    7.500909\n",
+       "y2    7.500909\n",
+       "y3    7.500000\n",
+       "y4    7.500909\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the mean for each column of y-axis values\n",
+    "np.mean(df.iloc[:, 5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -397,55 +449,86 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the standard deviation for each column of x and y values to six decimal places. Exclude the Unnamed: 0 column\n",
-    "\n",
     "np.std(df.iloc[:, 1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "y1    7.500909\n",
-       "y2    7.500909\n",
-       "y3    7.500000\n",
-       "y4    7.500909\n",
+       "x1    10.000000\n",
+       "x2    10.000000\n",
+       "x3    10.000000\n",
+       "x4    10.000000\n",
+       "y1     3.752063\n",
+       "y2     3.752390\n",
+       "y3     3.747836\n",
+       "y4     3.748408\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculate the mean for each column of y-axis values\n",
-    "np.mean(df.iloc[:, 5:])"
+    "np.var(df.iloc[:, 1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r=0.816421\n",
-      "r=0.816237\n",
-      "r=0.816287\n",
-      "r=0.816521\n"
+      "Linear regression line values Quartet I   =  [0.50009091 3.00009091]\n",
+      "Linear regression line values Quartet II  =  [0.5        3.00090909]\n",
+      "Linear regression line values Quartet III =  [0.49972727 3.00245455]\n",
+      "Linear regression line values Quartet IV  =  [0.49972727 3.00245455]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculating the linear regression (line of best fit) for each dataset follows the equation y = 0.5x + 3\n",
+    "Q_1 = np.polyfit(x1, y1, 1)\n",
+    "Q_2 = np.polyfit(x2, y2, 1)\n",
+    "Q_3 = np.polyfit(x3, y3, 1)\n",
+    "Q_4 = np.polyfit(x3, y3, 1)\n",
+    "\n",
+    "print(\"Linear regression line values Quartet I   = \", Q_1)\n",
+    "print(\"Linear regression line values Quartet II  = \", Q_2)\n",
+    "print(\"Linear regression line values Quartet III = \", Q_3)\n",
+    "print(\"Linear regression line values Quartet IV  = \", Q_4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation coefficient: r=0.816421\n",
+      "Correlation coefficient: r=0.816237\n",
+      "Correlation coefficient: r=0.816287\n",
+      "Correlation coefficient: r=0.816521\n"
      ]
     }
    ],
@@ -453,7 +536,7 @@
     "# Display descriptive statistics in formated columns to six decimal places\n",
     "pairs = (x1, y1), (x2, y2), (x3, y3), (x4, y4)\n",
     "for x, y in pairs:\n",
-    "    print('r=%1.6f' % (np.corrcoef(x, y)[0][1]))\n",
+    "    print(\"Correlation coefficient: \"'r=%1.6f' % (np.corrcoef(x, y)[0][1]))\n",
     "    \n",
     "# Based on code adapted from https://matplotlib.org/gallery/specialty_plots/anscombe.html "
    ]
@@ -470,7 +553,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "This dataset is interesting because it highlights the importance of plotting in statistical analysis.\n",
+    "\n",
+    "Each quartet of x, y values has the same mean, standard deviation, variance, linear regression equation (y = 0.5x + 3)\n",
+    "and correlation coefficient. These beinging the standard 'go-to' measurements for basic summary statistics. \n",
+    "\n",
+    "As such presenting only the summary statistics for this dataset one would conclude that the data in each of the quartets is\n",
+    "identical to the data in all of the others. \n",
+    "\n",
+    "When the data is plotted we see the real relationships. The sets of points in Quartet I appear to follow a rough linear relationship above and below the best fit line with some variance. Quartet II is curve that doesn’t follow a linear relationship. Quartet's III and IV look to both show linear relationships except for their outliers. Quartet III having a linear x, y relationship with the exception of one outlier and Quartet IV having only linear x relationship, again with one outlier.\n",
+    "\n",
+    "In his paper 'Graphs for Statistical Analysis', Anscombe powerfully presented the benefits of visualisation for deeping our understanding of the data being analysed, clearly demonstrating the hazards of not doing so. When he wrote his paper plotting was not widely used by statisticians, the fact that his Quartet is so widely used today is a fitting legacy for his  thinking, that was revolutionary at the time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### End"
+   ]
   }
  ],
  "metadata": {
@@ -478,18 +580,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
   }
  },
  "nbformat": 4,
