--- a/Fundamentals-of-Data-Analysis-Practical.ipynb
+++ b/Fundamentals-of-Data-Analysis-Practical.ipynb
@@ -484,6 +484,7 @@
     }
    ],
    "source": [
+    "# Calculate the variance for each column of x and y values\n",
     "np.var(df.iloc[:, 1:])"
    ]
   },
@@ -504,7 +505,8 @@
     }
    ],
    "source": [
-    "# Calculating the linear regression (line of best fit) for each dataset follows the equation y = 0.5x + 3\n",
+    "\"\"\"Calculating the linear regression (line of best fit) for each pair of x, y values to show they\n",
+    "they follow the equation y = 0.5x + 3\"\"\"\n",
     "Q_1 = np.polyfit(x1, y1, 1)\n",
     "Q_2 = np.polyfit(x2, y2, 1)\n",
     "Q_3 = np.polyfit(x3, y3, 1)\n",
@@ -580,6 +582,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
