Added note on references

--- a/Fundamentals-of-Data-Analysis-Practical.ipynb
+++ b/Fundamentals-of-Data-Analysis-Practical.ipynb
@@ -573,8 +573,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### End"
+    "### End\n",
+    "##### Please refer to README.md for a full list of references used"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
