--- a/Fundamentals-of-Data-Analysis-Practical.ipynb
+++ b/Fundamentals-of-Data-Analysis-Practical.ipynb
@@ -7,7 +7,7 @@
     "# Fundaments of Data Analysis - Practical Assignment 2018\n",
     "\n",
     "## Problem Statement\n",
-    "### The assignment concerns the well-known Anscombe's quartete dataset. You are required to create a Jupter notebook analysing the dataset. There are four distinct tasks to be carried out in your Jupyter notebook.\n",
+    "### The assignment concerns the well-known Anscombe's quartet dataset. You are required to create a Jupter notebook analysing the dataset. There are four distinct tasks to be carried out in your Jupyter notebook.\n",
     "\n",
     "\n",
     "1. Explain the background to the dataset - who created it, when it was created, and any speculation you can find regarding how it might have been created.\n",
